--- a/Potori.xcodeproj/xcshareddata/xcschemes/Potori (macOS).xcscheme
+++ b/Potori.xcodeproj/xcshareddata/xcschemes/Potori (macOS).xcscheme
@@ -5,12 +5,12 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PostActions>
+      <PreActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "/bin/sh ${PROJECT_DIR}/Scripts/post-build.sh&#10;">
+               scriptText = "source ${PROJECT_DIR}/Scripts/pre-build.sh&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
@@ -22,7 +22,7 @@
                </EnvironmentBuildable>
             </ActionContent>
          </ExecutionAction>
-      </PostActions>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
