--- a/Potori.xcodeproj/xcshareddata/xcschemes/macOS.xcscheme
+++ b/Potori.xcodeproj/xcshareddata/xcschemes/macOS.xcscheme
@@ -16,7 +16,7 @@
                      BuildableIdentifier = "primary"
                      BlueprintIdentifier = "849178672599F81700CD967F"
                      BuildableName = "Potori.app"
-                     BlueprintName = "Potori (macOS)"
+                     BlueprintName = "macOS"
                      ReferencedContainer = "container:Potori.xcodeproj">
                   </BuildableReference>
                </EnvironmentBuildable>
@@ -34,7 +34,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "849178672599F81700CD967F"
                BuildableName = "Potori.app"
-               BlueprintName = "Potori (macOS)"
+               BlueprintName = "macOS"
                ReferencedContainer = "container:Potori.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,7 +50,7 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8491787A2599F81700CD967F"
+               BlueprintIdentifier = "84841DB025BC413100468C6D"
                BuildableName = "Tests macOS.xctest"
                BlueprintName = "Tests macOS"
                ReferencedContainer = "container:Potori.xcodeproj">
@@ -74,7 +74,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "849178672599F81700CD967F"
             BuildableName = "Potori.app"
-            BlueprintName = "Potori (macOS)"
+            BlueprintName = "macOS"
             ReferencedContainer = "container:Potori.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -91,7 +91,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "849178672599F81700CD967F"
             BuildableName = "Potori.app"
-            BlueprintName = "Potori (macOS)"
+            BlueprintName = "macOS"
             ReferencedContainer = "container:Potori.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
