--- a/Widget/macOS/Widget Extension.entitlements
+++ b/Widget/macOS/Widget Extension.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>labs.lucka.potori</string>
+		<string>moe.lucka.potori</string>
 	</array>
 </dict>
 </plist>
