--- a/iOS/Potori.entitlements
+++ b/iOS/Potori.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.labs.lucka.potori</string>
+		<string>group.moe.lucka.potori</string>
 	</array>
 </dict>
 </plist>
