--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build for Testing
-        run: build-for-testing -scheme macOS
+        run: xcodebuild build-for-testing -scheme macOS
       - name: Test
         run: xcodebuild test-without-building -scheme macOS
+
+  build-ios:
+    name: Build and Test iOS Scheme
+    runs-on: macos-11.0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build for Testing
+        run: xcodebuild build-for-test -scheme iOS -destination 'platform=iOS Simulator,name=iPhone 12'
+      - name: Test
+        run: xcodebuild test-without-building -scheme iOS -destination 'platform=iOS Simulator,name=iPhone 12'
