Fix connection permission

--- a/Widget/macOS/Widget Extension.entitlements
+++ b/Widget/macOS/Widget Extension.entitlements
@@ -8,5 +8,7 @@
 	<array>
 		<string>moe.lucka.potori</string>
 	</array>
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
