--- a/macOS/Info.plist
+++ b/macOS/Info.plist
@@ -26,5 +26,9 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string></string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>NominationWidgetConfigurationIntent</string>
+	</array>
 </dict>
 </plist>
