--- a/Widget/iOS/Widget Extension.entitlements
+++ b/Widget/iOS/Widget Extension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.moe.lucka.potori</string>
+		<string>group.dev.lucka.potori</string>
 	</array>
 </dict>
 </plist>
