--- a/macOS/macOS.entitlements
+++ b/macOS/macOS.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>moe.lucka.potori</string>
+		<string>dev.lucka.potori</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
