--- a/Widget/macOS/Widget Extension.entitlements
+++ b/Widget/macOS/Widget Extension.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>dev.lucka.potori</string>
+		<string>group.dev.lucka.potori</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
