Share the auth with shared keychain, for #23

--- a/Widget/iOS/Widget Extension.entitlements
+++ b/Widget/iOS/Widget Extension.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>group.dev.lucka.potori</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)dev.lucka.Potori</string>
+	</array>
 </dict>
 </plist>
