--- a/Widget/macOS/Widget Extension.entitlements
+++ b/Widget/macOS/Widget Extension.entitlements
@@ -10,5 +10,9 @@
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)dev.lucka.Potori</string>
+	</array>
 </dict>
 </plist>
